--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<img src="logo.svg" alt="PerfectCup Logo">
+			<img src="logo.svg" alt="PerfectCup Логотип">
 			<h1>PerfectCup</h1>
 		</div>
 		<nav>
@@ -21,24 +21,44 @@
 	</header>
 
 	<section class="hero">
-		<h2>Делитесь мнением о кофе с друзьями</h2>
-		<p>PerfectCup — приложение, где вкус объединяет. Оценивайте, обсуждайте, находите новых любимчиков.</p>
-		<a href="#download" class="btn">Попробовать бесплатно</a>
+		<div class="hero-content">
+			<div class="hero-text">
+				<h2>Твой идеальный кофе — теперь с друзьями</h2>
+				<div class="hero-image">
+					<img src="mockup.png" alt="Мокап приложения">
+				</div>
+				<p>Делитесь мнением, открывайте новые вкусы и находите любимые напитки вместе.</p>
+				<br />
+				<a href="#download" class="btn">Попробовать бесплатно</a>
+			</div>
+		</div>
 	</section>
 
 	<section id="features" class="features">
 		<h3>Что умеет PerfectCup?</h3>
-		<ul>
-			<li>Оценка напитков по вкусу, аромату и крепости</li>
-			<li>Отзывы друзей и кофейное комьюнити</li>
-			<li>Лента лучших кофе по рейтингу</li>
-			<li>Сканирование напитков по штрихкоду</li>
-		</ul>
+		<div class="feature-list">
+			<div class="feature">
+				<h4>👅 Вкусовая оценка</h4>
+				<p>Аромат, крепость и послевкусие — выбирай лучшее!</p>
+			</div>
+			<div class="feature">
+				<h4>👥 Сообщество</h4>
+				<p>Читай отзывы друзей и экспертов, делись своими находками.</p>
+			</div>
+			<div class="feature">
+				<h4>📈 Тренды кофе</h4>
+				<p>Смотри, что сейчас популярно в твоём городе.</p>
+			</div>
+			<div class="feature">
+				<h4>📷 Сканирование</h4>
+				<p>Сканируй штрихкод и получай информацию о напитке мгновенно.</p>
+			</div>
+		</div>
 	</section>
 
 	<section id="download" class="download">
-		<h3>Скачай приложение</h3>
-		<p>Доступно на Android и iOS. Начни свое кофейное путешествие уже сегодня!</p>
+		<h3>Начни кофейное путешествие</h3>
+		<p>Доступно в App Store и Google Play. Установи бесплатно и погрузись в мир вкуса.</p>
 		<br />
 		<a href="#" class="btn">Скачать сейчас</a>
 	</section>
