--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="noindex, nofollow">
 	<title>PerfectCup — Делитесь вкусом кофе</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -60,7 +61,7 @@
 		<h3>Начни кофейное путешествие</h3>
 		<p>Доступно в App Store и Google Play. Установи бесплатно и погрузись в мир вкуса.</p>
 		<br />
-		<a href="#" class="btn">Скачать сейчас</a>
+		<a href="https://app.yourperfectcup.ru/" class="btn">Скачать сейчас</a>
 	</section>
 
 	<footer>
