--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="noindex, nofollow">
 	<title>PerfectCup — Делитесь вкусом кофе</title>
+	<meta name="description" content="PerfectCup - кофейное сообщество" />
+	<meta name="keywords" content="кофе, кофейня, сообщество, PerfectCup" />
+	<!-- icons -->
+	<link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
+	<link rel="shortcut icon" href="/icons/favicon.ico" />
+	<link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180">
+	<link rel="mask-icon" href="/icons/icon-192-maskable.png" color="#583208">
+	<meta name="theme-color" content="#583208">
+	<!-- share meta -->
+	<meta property="og:title" content="Кофейное сообщество PerfectCup">
+	<meta property="og:type" content="article" />
+	<meta property="og:description"
+		content="Присоединяйся ко мне в кофейном сообществе PerfectCup. Будет делиться мнениями о кофе и кофейнях в городе!">
+	<meta property="og:image" content="/images/social.jpg">
+	<meta name="twitter:card" content="summary_large_image">
+	<!-- styles -->
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -61,7 +78,7 @@
 		<h3>Начни кофейное путешествие</h3>
 		<p>Доступно в App Store и Google Play. Установи бесплатно и погрузись в мир вкуса.</p>
 		<br />
-		<a href="https://app.yourperfectcup.ru/" class="btn">Скачать сейчас</a>
+		<a target="_blank" href="https://app.yourperfectcup.ru/" class="btn">Скачать сейчас</a>
 	</section>
 
 	<footer>
